<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:layout_weight="0.5"
        android:text="@string/run_type_two"/>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="3.5">
        
        <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:orientation="horizontal"
	        android:gravity="center">
	        
	        <TextView 
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textSize="18sp"
	        	android:layout_marginRight="10dp"
	        	android:text="@string/duration"/>
	        
	        <TextView 
	            android:id="@+id/run_duration"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="18sp"
	            android:layout_marginRight="5dp"/>
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="18sp"
	            android:text="@string/time_unit"/>
	        
	    </LinearLayout>
        
        <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:orientation="horizontal"
	        android:padding="5dp"
	        android:gravity="center">
	        
	        <ImageView 
	            android:layout_width="30dp"
	            android:layout_height="30dp"
	            android:layout_marginRight="20dp"
	            android:background="@drawable/timer"/>
	        
	        <SeekBar 
	            android:id="@+id/seek_run_duration"
	        	android:layout_width="230dp"
	        	android:layout_height="wrap_content"/>
	        
	    </LinearLayout>
	    
	    
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="200dp"
	        android:src="@drawable/run_type_two"/>
        
    </LinearLayout>
    
    
    <Button 
        android:id="@+id/start_run"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/start_run"/>

</LinearLayout>
